# assignment-4

./: .gitignore  CMakeLists.txt  Game.cpp  GameStates.cpp  GameStates.h  README.md  State.h  game.cpp  game.h  gamestates.cpp  gamestates.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  question.cpp  question.h  question.ui
console/: CMakeLists.txt  Game.cpp  Game.h  GameStates.cpp  GameStates.h  State.h  main.cpp
